questions with style added

--- a/src/app/components/StartButton/StartButton.scss
+++ b/src/app/components/StartButton/StartButton.scss
@@ -1,6 +1,6 @@
-@use "../../scss/constants" as *;
+@use "@/app/scss/constants" as *;
 
-.language-button {
+.start-button {
     color: $yellow_stroke;
     font-weight: bold;
     font-size: 20px;
