--- a/src/app/components/Question/Question.scss
+++ b/src/app/components/Question/Question.scss
@@ -30,11 +30,15 @@
     display: flex;
     justify-content: center;
     border: 1px solid $yellow_stroke;
+    font-weight: bold;
+    font-size: 20px;
     width: 80%;
     padding: 10px;
+    cursor: pointer;
 
     &__text {
         font-size: 20px;
         text-align: center;
+        color: white;
     }
 }
