--- a/src/app/components/SettingsButton/SettingsButton.scss
+++ b/src/app/components/SettingsButton/SettingsButton.scss
@@ -1,9 +1,9 @@
 @use "@/app/scss/constants" as *;
 
 .settings-button {
-    color: $yellow_stroke;
+    color: $yellow_stroke !important;
     font-weight: bold;
     font-size: 20px;
-    border: 3px solid $yellow_stroke;
+    border: 3px solid $yellow_stroke !important;
     width: 100%;
 }
