--- a/src/app/components/Result/Result.scss
+++ b/src/app/components/Result/Result.scss
@@ -30,7 +30,7 @@
 
     &__home-container {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         width: 100dvw;
         margin-bottom: 3%;
         margin-right: 2%;
